# geopandas

./: README.md  geopandas_geobr.ipynb  maps_init.ipynb  primeiro_programa.py  pyproject.toml  teste_input.py
geopandas/: main.py  pyproject.toml
